--- a/clientes.html
+++ b/clientes.html
@@ -376,7 +376,7 @@
                                 <span class="text">Agregar Cliente</span>
                             </a>
                             <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <table class="table table-bordered" id="tablaClientes" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
                                             <th>ID</th>
@@ -490,10 +490,11 @@
             for(let cliente of clientes){
                 agregarClienteTabla(cliente);
             }
+            $('#tablaClientes').DataTable();
         }
 
         function agregarClienteTabla(cliente){
-            $('#dataTable tbody').append(`<tr>
+            $('#tablaClientes tbody').append(`<tr>
                                             <td>${cliente.id}</td>
                                             <td>${cliente.apellido}, ${cliente.nombre}</td>
                                             <td>${cliente.email}</td>
