--- a/clientes.html
+++ b/clientes.html
@@ -384,6 +384,7 @@
                                             <th>Email</th>
                                             <th>Telefono</th>
                                             <th>Detalle</th>
+                                            <th>Acciones</th>
                                         </tr>
                                     </thead>
                                     <tfoot>
@@ -493,6 +494,19 @@
             $('#tablaClientes').DataTable();
         }
 
+        function eliminarCliente(id){
+            let confirmarEliminar = confirm('¿Desea eliminar este cliente?')
+            if(!confirmarEliminar){ return; }
+            fetch('http://localhost/sistema_php_2022/api/eliminar.php?id=' +id, {
+                method: "GET",
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                }
+            })
+            .then(respuesta => window.location.reload())
+        }
+
         function agregarClienteTabla(cliente){
             $('#tablaClientes tbody').append(`<tr>
                                             <td>${cliente.id}</td>
@@ -500,6 +514,11 @@
                                             <td>${cliente.email}</td>
                                             <td>${cliente.telefono}</td>
                                             <td>${cliente.detalle}</td>
+                                            <td>
+                                                <a href="#" onclick="eliminarCliente(${cliente.id})" class="btn btn-danger btn-circle btn-sm">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            </td>
                                         </tr>`);  
         }
     </script>
