--- a/clientes.html
+++ b/clientes.html
@@ -466,6 +466,17 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
+
+    <!--Library Datatable-->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
+
     <script>
         //es para que se ejecute cuando termine de cargar 
         $(document).ready(function(){
@@ -491,7 +502,16 @@
             for(let cliente of clientes){
                 agregarClienteTabla(cliente);
             }
-            $('#tablaClientes').DataTable();
+            $('#tablaClientes').DataTable({
+                dom: 'Bfrtip',
+                buttons: [
+                'copy', 
+                'csv', 
+                'excel', 
+                'pdf', 
+                'print'
+                ]
+            }); //iniciamos la tabla
         }
 
         function eliminarCliente(id){
